--- a/css/style.css
+++ b/css/style.css
@@ -104,23 +104,6 @@ body {
   box-sizing: border-box;
 }
 
-.game-screen {
-  display: none;
-  position: fixed;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate3d(-50%, -50%, 0);
-  -moz-transform: translate3d(-50%, -50%, 0);
-  transform: translate3d(-50%, -50%, 0);
-
-  box-sizing: border-box;
-  width: 800px;
-  height: 480px;
-  overflow: hidden;
-
-  background: url(../img/background-dark.png) no-repeat;
-  background-size: cover;
-}
 /*                              End Main game screen style                   */
 
 /*                              Sreen death style                          */
@@ -634,7 +617,7 @@ body {
   width: 800px;
   height: 480px;
   overflow: hidden;
-  background: url(../img/background-dark.png) no-repeat;
+  background: url(../img/bg.png) no-repeat;
   background-size: contain;
 }
 .game-screen--death {
